FILE(GLOB TESTCLASS_SOURCES *.cc)

SET(CLASS_EXE class_user)
# add executable
ADD_EXECUTABLE(${CLASS_EXE} ${TESTCLASS_SOURCES})
TARGET_LINK_LIBRARIES(${CLASS_EXE} dl)

SET_TARGET_PROPERTIES(${CLASS_EXE}
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/bin"
)

INSTALL(TARGETS ${CLASS_EXE} DESTINATION bin)